# learn_backend

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  ruff.toml
src/learn_backend/: main.py
src/learn_backend/app/api/v1/: routers.py
src/learn_backend/app/api/v1/endpoints/: todos.py
src/learn_backend/app/core/: config.py  database.py
src/learn_backend/app/models/: todo.py
src/learn_backend/app/schemas/: todos.py
src/learn_backend/app/services/: todos.py
