[project]
name = "learn-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.133.1",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "ruff>=0.15.4",
    "sqlalchemy>=2.0.47",
    "uvicorn>=0.41.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"   

[tool.hatch.build.targets.wheel]
packages = ["src/learn_backend"]
